[package]
name = "fanotify-rs"
version = "0.4.0"
authors = ["zhanglei <mrzhang.lei@outlook.com>", "n01e0 <noleo@vanillabeans.mobi>", "Philip Woolford <woolford.philip@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The high-level/low-level implementation of Linux Fanotify."
repository = "https://github.com/ZhangLei-cn/fanotify-rs"
readme = "README.md"

[lib]
name = "fanotify"
path = "src/lib.rs"
doc = true

[dependencies]
libc = "0.2"
enum-iterator = "1.5"