[package]
name = "profile"
version = "0.1.0"
authors = ["Zhanglei-cn <mrzhang.lei@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fanotify-rs = {path = "../",version = "0.2.4"}
[profile.release]
debug = true