[package]
name = "with_poll"
version = "0.1.0"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2018"
description = "fanotify-rs with poll"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
fanotify-rs = { path = "../../" }
nix = {version = "0.30.1", features = ["poll"] }
